combination field is modified

--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -1,4 +1,5 @@
-<img src="{{ avatar.image.url }}"><br>
+<img src="{{ avatar.image_f.url }}">
+<img src="{{ avatar.image_b.url }}"><br>
 
 <p>Name: {{avatar.name}}<br>
 Strength: {{avatar.strength}}<br>
