--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -1,25 +1,3 @@
-<<<<<<< HEAD
-<!--
-
-<img src="{{ avatar.image.url }}"><br>
-=======
-<img src="{{ avatar.image_f.url }}">
-<img src="{{ avatar.image_b.url }}"><br>
->>>>>>> f7f6109c661fda764d021d0676380970e487bdeb
-
-<p>Name: {{avatar.name}}<br>
-Strength: {{avatar.strength}}<br>
-Intelligence: {{avatar.intelligence}}<br>
-Charm: {{avatar.charm}}<br>
-Surplus: {{avatar.surplus}}<br>
-Luck: {{avatar.luck}}<br></p>
-
-{% for i in clist %}
-	<img src="{{ i.item.icon.url }}">
-{% endfor %}
-
--->
-
 {% load static %}
 
 <!DOCTYPE html>
@@ -99,21 +77,21 @@ Luck: {{avatar.luck}}<br></p>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-sm-offset-3">
 					<div class="row">
-						<div class="col-xs-4">
-							<img src="media/images/icon/jangjjal.png" alt="장짤" class="img-responsive img-rounded">
+						<div class="col-xs-4" id="item-left">
+							<img src="{% static 'tycoon/white.png' %}" class="img-responsive img-rounded">
 						</div>
 						<div class="col-xs-4">
 							<img src="{% static 'tycoon/plus.png' %}" alt="더하기" class="img-responsive plus">
 						</div>
-						<div class="col-xs-4">
-							<img src="media/images/icon/jangjjal.png" alt="장짤" class="img-responsive img-rounded">
+						<div class="col-xs-4" id="item-right">
+							<img src="{% static 'tycoon/white.png' %}" class="img-responsive img-rounded">
 						</div>
 					</div>
 					<br>
 					<br>
 					<div class="row">
 						<div class="col-xs-8 col-xs-offset-2">
-							<img src="media/images/icon/youngjjal.png" alt="영짤" class="img-responsive img-rounded">
+							<img id="item-combined" src="{% static 'tycoon/white.png' %}" class="img-responsive img-rounded">
 						</div>
 					</div>
 					<br>
@@ -122,7 +100,7 @@ Luck: {{avatar.luck}}<br></p>
 					<div class="row" id="item_basket">
 						{% for i in clist %}
 						<div class="col-xs-3 item">
-							<img src="{{ i.item.icon.url }}" alt="{{ i.item.name }}" class="img-responsive img-rounded">
+							<img src="{{ i.item.icon.url }}" alt="{{ i.item.name }}" contains="{{ i.pk }}" class="img-responsive img-rounded">
 						</div>
 						{% endfor %}
 					</div>
@@ -149,6 +127,8 @@ Luck: {{avatar.luck}}<br></p>
 		  	</div>
 		  </div>
 		</footer>
+
+		<script src="{% static 'tycoon/combination.js' %}"></script>
 
 	</body>
 </html>
