--- a/tycoon/templates/tycoon/codeToItem.html
+++ b/tycoon/templates/tycoon/codeToItem.html
@@ -6,8 +6,8 @@
 	<body>
 		{% include "tycoon/nav.html" %}
 
-		<div class="character">
-			<p>HOME</p>			
+		<div class="codeToitem">
+			<p>code to item</p>			
 		</div>
 
 		{% include "tycoon/footer.html" %}
