--- a/tycoon/templates/tycoon/mission.html
+++ b/tycoon/templates/tycoon/mission.html
@@ -6,8 +6,8 @@
 	<body>
 		{% include "tycoon/nav.html" %}
 
-		<div class="character">
-			<p>HOME</p>			
+		<div class="mission">
+			<p>mission</p>			
 		</div>
 
 		{% include "tycoon/footer.html" %}
