--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -5,6 +5,7 @@
 	{% include "tycoon/header.html" %}
 		<body>
 		{% include "tycoon/nav.html" %}
+		{% csrf_token %}
 
 		<div class="container combination">
 			<div class="row">
