--- a/tycoon/templates/tycoon/use.html
+++ b/tycoon/templates/tycoon/use.html
@@ -5,24 +5,30 @@
 	{% include "tycoon/header.html" %}
 	<body>
 		{% include "tycoon/nav.html" %}
+		{% csrf_token %}
 
-		<div class="character">
-			<div class="container">
-				<div class="row">
-					<h2 class="text-center">{{ avatar.name }}</h2></br>
-					<div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-1">
-						<img src="{{ avatar.image_f.url }}" class="img-responsive">
+		<div class="container combination">
+			<div class="row">
+				<br>
+				<br>
+				<br>
+				<br>
+				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
+					<div class="row" id="item_basket">
+						<h1 class="text-center">소유중인 아이템</h1>
+						{% for i in clist %}
+						<div class="col-xs-3 item">
+						<img src="{{ i.item.icon.url }}" alt="{{ i.item.name }}" contains="{{ i.pk }}" class="img-responsive img-rounded">
+						</div>
+						{% endfor %}
 					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-lg-6 col-lg-offset-1">
-						<canvas id="myChart" width="400" height="400"></canvas>
-					</div>
-					<!--<div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-4">
-						<img src="{{ avatar.image_b.url }}" class="img-responsive">
-					</div>-->
+				</div>
+				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
+					<canvas id="myChart" width="400" height="400"></canvas>
 				</div>
 			</div>
 		</div>
-
+		
 		<script src="{% static 'tycoon/Chart.js' %}"></script>
 		<script>
 		var ctx = document.getElementById("myChart");
@@ -43,10 +49,9 @@
 			data: dat, 
 			option: {
 				scale: {
-					ticks: {
-						beginAtZero: true
-					}
-				}
+					reverse: true,
+					ticks: { beginAtZero: true },
+				},
 			}
 		});
 		</script>
