--- a/tycoon/static/tycoon/style.css
+++ b/tycoon/static/tycoon/style.css
@@ -73,3 +73,10 @@ img {
 img.non-pixel {
 	image-rendering: auto;
 }
+
+img.gray {
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+	filter: grayscale(100%);
+	opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+}
