--- a/tycoon/templates/tycoon/avatar.html
+++ b/tycoon/templates/tycoon/avatar.html
@@ -13,6 +13,7 @@
 					<div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-1">
 						<img src="{{ avatar.image_f.url }}" class="img-responsive">
 					</div>
+					<br><br>
 					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-lg-6 col-lg-offset-1">
 						<canvas id="myChart" width="400" height="400"></canvas>
 					</div>
@@ -29,17 +30,46 @@
 		var dat = {
 			labels: ["체력", "지력", "매력", "잉여력", "운"],
 			datasets: [{
-				label: null,
-				backgroundColor: "rgba(179,181,198,0.2)",
-			   	borderColor: "rgba(179,181,198,1)",
-			   	pointBackgroundColor: "rgba(179,181,198,1)",
+				label: "능력치",
+				backgroundColor: "rgba(209, 48, 118, 0.2)",
+			   	borderColor: "rgba(209, 48, 118, 0.8)",
+			   	pointBackgroundColor: "rgba(209, 48, 118, 0.8)",
 			   	pointBorderColor: "#fff",
 			   	pointHoverBackgroundColor: "#fff",
-			   	pointHoverBorderColor: "rgba(179,181,198,1)",
+			   	pointHoverBorderColor: "rgba(209, 48, 118, 0.8)",
 			   	data: [{{avatar.strength}},{{avatar.intelligence}},{{avatar.charm}},{{avatar.surplus}},{{avatar.luck}}]}]
 			};
 		var myRadarChart = new Chart(ctx, { 
 			type: 'radar', 
+			data: dat, 
+			options: {
+				scale: {
+					ticks: { 
+						beginAtZero: true, 
+						max: 30
+					}
+				}
+			}
+		});
+		</script>
+<!--
+		<script src="{% static 'tycoon/Chart.js' %}"></script>
+		<script>
+		var ctx = document.getElementById("myChart");
+		var dat = {
+			labels: ["체력", "지력", "매력", "잉여력", "운"],
+			datasets: [{
+				backgroundColor: [
+					"#FF6384",
+					"#4BC0C0",
+					"#FFCE56",
+					"#E7E9ED",
+					"#36A2EB"
+					],
+			   	data: [{{avatar.strength}},{{avatar.intelligence}},{{avatar.charm}},{{avatar.surplus}},{{avatar.luck}}]}]
+			};
+		var myRadarChart = new Chart(ctx, { 
+			type: 'polarArea', 
 			data: dat, 
 			option: {
 				scale: {
@@ -50,7 +80,7 @@
 			}
 		});
 		</script>
-
+-->
 		{% include "tycoon/footer.html" %}
 	</body>
 </html>
