complete codeToItem, ItemBook. I want to add animation

--- a/tycoon/templates/tycoon/codeToItem.html
+++ b/tycoon/templates/tycoon/codeToItem.html
@@ -21,8 +21,8 @@
 		
 		<!--
 		<script type="text/javascript">
-  			function alertBox() {
-				alert('HI');
+  			function alertBox(mes) {
+				alert(mes);
 			}
 		</script> -->
 
