--- a/tycoon/templates/tycoon/avatar.html
+++ b/tycoon/templates/tycoon/avatar.html
@@ -7,19 +7,16 @@
 		{% include "tycoon/nav.html" %}
 
 		<div class="character">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
 					<h2 class="text-center">{{ avatar.name }}</h2></br>
-					<div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-1">
+					<div class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-2">
 						<img src="{{ avatar.image_f.url }}" class="img-responsive">
 					</div>
 					<br><br>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-lg-6 col-lg-offset-1">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-lg-4 col-lg-offset-1">
 						<canvas id="myChart" width="400" height="400"></canvas>
 					</div>
-					<!--<div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-4">
-						<img src="{{ avatar.image_b.url }}" class="img-responsive">
-					</div>-->
 				</div>
 			</div>
 		</div>
