--- a/tycoon/templates/tycoon/use.html
+++ b/tycoon/templates/tycoon/use.html
@@ -16,12 +16,9 @@
 				<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
 					<div class="row" id="item_basket">
 						<h1 class="text-center">소유중인 아이템</h1>
-						{% for i in own_list %}
-						<div class="col-xs-3 item">
-						{% if i == true %}
+						{% for i in clist %}
+						<div class="item col-xs-3">
 							<img src="{{ i.item.icon.url }}" alt="{{ i.item.name }}" contains="{{ i.pk }}" class="img-responsive img-rounded">
-						{% else %}
-							<img src="{{ i.item.icon.url }}" alt="{{ i.item.name }}" contains="{{ i.pk }}" class="gray img-responsive img-rounded">	
 						</div>
 						{% endfor %}
 					</div>
