--- a/tycoon/templates/tycoon/codeToItem.html
+++ b/tycoon/templates/tycoon/codeToItem.html
@@ -8,24 +8,22 @@
 
 		<div class="codeToitem">
 			<div class="container">
-				<h2 class="text-center">code to Item</h2>	
-				<form action="codeToItem" method="POST">
+				<h2 class="text-center">코드 입력</h2>	
+				<form class="text-center" id="codeToItemForm">
 					<div class="form-group col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4">
-					{% csrf_token %}
+						{% csrf_token %}
+						<img class="img-responsive" id="code_to_item_box" src="{% static 'tycoon/code_to_item_box/01_new_box.png' %}">
+						<br>
 						<input type="text" class="form-control" id="codeToItem" name="codeToItem" placeholder="input your code">
-						<button type="submit" class="btn btn-default" >Submit</button>
+						<br>
+						<button type="submit" class="btn btn-default" >아이템 받기</button>
 					</div>
 				</form>
 			</div>
 		</div>
-		
-		<!--
-		<script type="text/javascript">
-  			function alertBox(mes) {
-				alert(mes);
-			}
-		</script> -->
 
 		{% include "tycoon/footer.html" %}
+
+		<script src="{% static 'tycoon/codeToItem.js' %}"></script>
 	</body>
 </html>
