--- a/tycoon/templates/tycoon/nav.html
+++ b/tycoon/templates/tycoon/nav.html
@@ -8,18 +8,19 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="avatar.html">POSTECHian Tycoon</a>
+			<a class="navbar-brand" href="/avatar/">POSTECHian Tycoon</a>
 	    </div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="avatar.html">우리 분반</a></li>
-				<li><a href="codeToItem.html">코드 입력</a></li>
-				<li><a href="use.html">능력치 올리기</a></li>
-				<li><a href="combination.html">조합하기</a></li>
-				<li><a href="itemBook.html">아이템 도감</a></li>
-				<li><a href="mission.html">분반별 미션</a></li>
+				<li><a href="/avatar/">우리 분반</a></li>
+				<li><a href="/codeToItem/">코드 입력</a></li>
+				<li><a href="/use/">능력치 올리기</a></li>
+				<li><a href="/combination/">조합하기</a></li>
+				<li><a href="/itemBook/">아이템 도감</a></li>
+				<li><a href="/mission/">분반별 미션</a></li>
+				<li><a href="{% url 'django.contrib.auth.views.logout' %}?next=/login/">Log out</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">다른 분반 <span class="caret"></span></a>
 					<ul class="dropdown-menu">
