--- a/tycoon/templates/tycoon/itemBook.html
+++ b/tycoon/templates/tycoon/itemBook.html
@@ -9,9 +9,33 @@
 		<div class="container combination">
 			<div class="row" id="item_basket">
 				{% for item in item_list %}
-				<div class="item col-xs-2">
+				<div class="item col-xs-4 col-sm-3 col-lg-2">
 					{% if item.1 %}
-						<img id="canvasSource" src="{{ item.0.icon.url }}" alt="{{ item.0.name }}" class="img-responsive img-rouded">
+						<img id="canvasSource" src="{{ item.0.icon.url }}" alt="{{ item.0.name }}" 
+						class="img-responsive img-rouded" data-toggle="modal" data-target="#myModal">
+
+						<div class="modal fade bs-example-modal-sm" id="myModal" tabindex="-1" 
+						role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+							<div class="modal-dialog modal-sm">
+								<div class="modal-content">
+									{% for c in comb_list %}
+										{% if item.0.name == c.combination.new_item.name %}
+											<div class="col-xs-4"> 
+												<img src="{{ c.combination.item1.icon.url }}" alt="{{ c.combination.item1.name }}" 
+												class="img-responsive img-rouded">
+											</div>
+											<div class="col-xs-4">
+												<img src="{% static 'tycoon/plus.png' %}" alt="더하기">
+											</div>
+											<div class="col-xs-4">
+												<img src="{{ c.combination.item2.icon.url }}" alt="{{ c.combination.item2.name }}" 
+												class="img-responsive img-rouded">
+											</div>
+										{% endif %}
+									{% endfor %}
+								</div>
+							</div>
+						</div>
 					{% else %}	
 						<img src="{{ item.0.icon.url }}" alt="{{ item.0.name }}" class="gray img-responsive img-rouded">
 					{% endif %}
@@ -20,6 +44,42 @@
 			</div>
 		</div>
 		{% include "tycoon/footer.html" %}
+	
+		<!-- MODAL -->
+		<div class="modal fade bs-example-modal-sm" id="myModal" tabindex="-1" 
+		role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-sm">
+			   	<div class="modal-content">
+					{% for c in comb_list %}
+			    		{% if item.0.name == c.combination %}
+							<!--
+							<div class="col-xs-4"> 
+								<img src="{{ c.combination.item1.icon.url }}" alt="{{ c.combination.item1.name }}" 
+								class="img-responsive img-rouded">
+							</div>
+							<div class="col-xs-4">
+								<img src="{% static 'tycoon/plus.png' %}" alt="더하기">
+							</div>
+							<div class="col-xs-4">
+								<img src="{{ c.combination.item2.icon.url }}" alt="{{ c.combination.item2.name }}" 
+								class="img-responsive img-rouded">
+							</div>
+							-->
+							{{ item.0.name }}
+							<br>
+							{{ c.combination }}
+							<br><br>
+						{% else %}
+							name<br>
+							{{ item.0 }}
+							<br>
+							{{ c.combination.new_item.name }}
+							<br>
+						{% endif %}
+					{% endfor %}
+				</div>
+			</div>
+		</div>
 
 	</body>
 </html>
