--- a/tycoon/templates/tycoon/avatar.html
+++ b/tycoon/templates/tycoon/avatar.html
@@ -13,9 +13,8 @@
 					<div class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-2">
 						<img src="{{ avatar.image_f.url }}" class="img-responsive">
 					</div>
-					<br><br>
 					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-lg-4 col-lg-offset-1">
-						<canvas id="myChart" width="400" height="400"></canvas>
+						<canvas id="myChart" width="400" height="400" style="margin-top: 20px"></canvas>
 					</div>
 				</div>
 			</div>
