--- a/tycoon/templates/tycoon/nav.html
+++ b/tycoon/templates/tycoon/nav.html
@@ -8,39 +8,26 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/avatar/">POSTECHian Tycoon</a>
+			<a class="navbar-brand" href="/tycoon/home/">POSTECHian Tycoon</a>
 	    </div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/avatar/">우리 분반</a></li>
-				<li><a href="/codeToItem/">코드 입력</a></li>
-				<li><a href="/use/">능력치 올리기</a></li>
-				<li><a href="/combination/">조합하기</a></li>
-				<li><a href="/itemBook/">아이템 도감</a></li>
-				<li><a href="/mission/">분반별 미션</a></li>
-				<li><a href="{% url 'django.contrib.auth.views.logout' %}?next=/login/">Log out</a></li>
+				<li><a href="/tycoon/codeToItem/">코드 입력</a></li>
+				<li><a href="/tycoon/use/">능력치 올리기</a></li>
+				<li><a href="/tycoon/combination/">조합하기</a></li>
+				<li><a href="/tycoon/itemBook/">아이템 도감</a></li>
+				<li><a href="/tycoon/mission/">분반별 미션</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">다른 분반 <span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="#">1분반</a></li>
-						<li><a href="#">2분반</a></li>
-						<li><a href="#">3분반</a></li>
-						<li><a href="#">4분반</a></li>
-						<li><a href="#">5분반</a></li>
-						<li><a href="#">6분반</a></li>
-						<li><a href="#">7분반</a></li>
-						<li><a href="#">8분반</a></li>
-						<li><a href="#">9분반</a></li>
-						<li><a href="#">10분반</a></li>
-						<li><a href="#">11분반</a></li>
-						<li><a href="#">12분반</a></li>
-						<li><a href="#">13분반</a></li>
-						<li><a href="#">14분반</a></li>
-						<li><a href="#">15분반</a></li>
+						{% for user in all_users %}
+						<li><a href="/tycoon/avatar/{{user.pk}}/"{>{{ user.pk|add:-1 }}분반</a></li>
+						{% endfor %}
 					</ul>
 				</li>
+				<li><a href="{% url 'django.contrib.auth.views.logout' %}?next=/login/">로그아웃</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
