--- a/tycoon/templates/tycoon/nav.html
+++ b/tycoon/templates/tycoon/nav.html
@@ -27,7 +27,7 @@
 						{% endfor %}
 					</ul>
 				</li>
-				<li><a href="{% url 'django.contrib.auth.views.logout' %}?next=/login/">로그아웃</a></li>
+				<li><a href="{% url 'django.contrib.auth.views.logout' %}?next=/home/">로그아웃</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
