--- a/tycoon/templates/registration/login.html
+++ b/tycoon/templates/registration/login.html
@@ -1,4 +1,3 @@
-{% load static %}
 
 <!DOCTYPE html>
 <html>
@@ -8,19 +7,23 @@
 
 		<div class='login'>
 			<div class='container'>
-				<div class='form-group col-xs-4 col-xs-offset-4'>
+				<div class='form-group col-xs-6 col-xs-offset-4'>
 					{% if form.errors %}
 						<p>Incorrect ID or Password</p>
 					{% endif %}
 
 					<form method="post" action="{% url 'login' %}">
 						{% csrf_token %}
-
-						<p>Username</p>
-						<p>{{ form.username }}</p>
-						<p>Password</p>
-						<p>{{ form.password }}</p>
-
+						<table>
+							<tr>
+								<td>{{ form.username.label_tag }}</td>
+								<td>{{ form.username }}</td>
+							</tr>
+							<tr>
+								<td>{{ form.password.label_tag }}</td>
+								<td>{{ form.password }}</td>
+							</tr>
+						</table>
 						<input type="hidden" name="next" value="{{ next }}" />
 						<input type="submit" value="login" />
 					</form>
