--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -9,7 +9,7 @@
 
 		<div class="container combination">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-sm-offset-3">
+				<div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
 					<div class="row">
 						<div class="col-xs-4" id="item-left">
 							<img src="{% static 'tycoon/white.png' %}" class="img-responsive img-rounded">
@@ -25,10 +25,11 @@
 					<br>
 					<div class="row">
 						<div class="col-xs-8 col-xs-offset-2">
-							<img id="item-combined" src="{% static 'tycoon/white.png' %}" class="img-responsive img-rounded">
+							<img combined='false' id="item-combined" src="{% static 'tycoon/white.png' %}" class="img-responsive img-rounded">
 						</div>
 					</div>
 					<br>
+					<button id="combine" class="btn btn-default">조합하기</button>
 					<br>
 					<h1 class="text-center">소유중인 아이템</h1>
 					<div class="row" id="item_basket">
