finish mission page

--- a/tycoon/templates/tycoon/itemBook.html
+++ b/tycoon/templates/tycoon/itemBook.html
@@ -7,6 +7,7 @@
 		{% include "tycoon/nav.html" %}
 
 		<div class="container combination">
+			<h2 class="text-center">아이템 도감</h2>	
 			<div class="row" id="item_basket">
 				{% for item in item_list %}
 				<div class="item col-xs-4 col-sm-3 col-lg-2">
@@ -20,6 +21,7 @@
 				</div>
 				{% endfor %}
 			</div>
+			<br>
 		</div>
 		{% include "tycoon/footer.html" %}
 		
