--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -9,6 +9,7 @@
 
 		<div class="container combination">
 			<div class="row">
+				<h2 class="text-center">조합하기</h2>
 				<div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
 					<div class="row">
 						<div class="col-xs-4" id="item-left">
