want to make explantaion

--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -30,6 +30,9 @@
 						</div>
 					</div>
 					<br>
+					<input type="text" id="text_name" style="text-align:center" readonly/>
+					<br>
+					<br>
 					<button id="combine" class="btn btn-default">조합하기</button>
 					<br>
 					<h1 class="text-center">소유중인 아이템</h1>
