no show other teams item

--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -30,8 +30,7 @@
 						</div>
 					</div>
 					<br>
-					<input type="text" id="text_name" style="text-align:center" readonly/>
-					<br>
+					<p id="explan">hi</p>
 					<br>
 					<button id="combine" class="btn btn-default">조합하기</button>
 					<br>
