add explanation while doing combination

--- a/tycoon/templates/tycoon/combination.html
+++ b/tycoon/templates/tycoon/combination.html
@@ -30,7 +30,7 @@
 						</div>
 					</div>
 					<br>
-					<p id="explan">hi</p>
+					<p id="explan"> </p>
 					<br>
 					<button id="combine" class="btn btn-default">조합하기</button>
 					<br>
