--- a/tycoon/templates/registration/login.html
+++ b/tycoon/templates/registration/login.html
@@ -7,25 +7,23 @@
 
 		<div class='login'>
 			<div class='container'>
-				<div class='form-group col-xs-6 col-xs-offset-4'>
+				<div class='form-group col-xs-12 col-sm-6 col-sm-offset-3'>
 					{% if form.errors %}
 						<p>Incorrect ID or Password</p>
 					{% endif %}
 
 					<form method="post" action="{% url 'login' %}">
 						{% csrf_token %}
-						<table>
-							<tr>
-								<td>{{ form.username.label_tag }}</td>
-								<td>{{ form.username }}</td>
-							</tr>
-							<tr>
-								<td>{{ form.password.label_tag }}</td>
-								<td>{{ form.password }}</td>
-							</tr>
-						</table>
+						<div class="form-group">
+							{{ form.username.label_tag }}
+							{{ form.username }}
+						</div>
+						<div class="form-group">
+							{{ form.password.label_tag }}
+							{{ form.password }}
+						</div>
 						<input type="hidden" name="next" value="{{ next }}" />
-						<input type="submit" value="login" />
+						<input class="center-block" type="submit" value="login" />
 					</form>
 				</div>
 			</div>
