--- a/tycoon/templates/tycoon/header.html
+++ b/tycoon/templates/tycoon/header.html
@@ -26,4 +26,13 @@
 	crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" type="text/css" href="{% static 'tycoon/style.css' %}" />
+
+	<!-- For iPad with high-resolution Retina display running iOS ≥ 7: --> <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/static/favicon/favicon-152.png"> <!-- For iPad with high-resolution Retina display running iOS ≤ 6: --> <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/favicon/favicon-144.png"> <!-- For iPhone with high-resolution Retina display running iOS ≥ 7: --> <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/static/favicon//favicon-120.png"> <!-- For iPhone with high-resolution Retina display running iOS ≤ 6: --> <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/favicon//favicon-114.png"> <!-- For first- and second-generation iPad: --> <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/favicon/favicon-72.png"> <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --> <link rel="apple-touch-icon-precomposed" href="/static/favicon/favicon-57.png">
+
+	<link rel="icon" href="/static/favicon/favicon-32.png" sizes="32x32">
+
+	<meta property="og:title" content="포스테키안 키우기" />
+	<meta property="og:description" content="2017년도 새내기새로배움터 테마기획" />
+	<meta property="og:image" content="/static/thumbnail.png"
+
 </head>
