--- a/tycoon/templates/tycoon/login.html
+++ b/tycoon/templates/tycoon/login.html
@@ -8,7 +8,7 @@
 
 		<div class='login'>
 			<div class='container'>
-				<div class='form-group col-xs-4 col-xs-offset-4'>
+				<div class='form-group col-xs-12 col-sm-4 col-sm-offset-4'>
 					{% if form.errors %}
 						<p>Incorrect ID or Password</p>
 					{% endif %}
