--- a/tycoon/templates/tycoon/nav.html
+++ b/tycoon/templates/tycoon/nav.html
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/home/">POSTECHian Tycoon</a>
+			<a class="navbar-brand" href="/home/">포스테키안 키우기</a>
 	    </div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,6 +20,7 @@
 				<li><a href="/combination/">조합하기</a></li>
 				<li><a href="/itemBook/">아이템 도감</a></li>
 				<li><a href="/mission/">분반별 미션</a></li>
+				<li><a href="/map/">지도</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">다른 분반 <span class="caret"></span></a>
 					<ul class="dropdown-menu">
