--- a/tycoon/templates/tycoon/nav.html
+++ b/tycoon/templates/tycoon/nav.html
@@ -24,6 +24,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">다른 분반 <span class="caret"></span></a>
 					<ul class="dropdown-menu">
+						<li><a href="/ranking/">랭킹</a></li>
 						{% for user in all_users %}
 						<li><a href="/avatar/{{user.0}}/"{>{{ user.1 }}</a></li>
 						{% endfor %}
