--- a/tycoon/templates/tycoon/nav.html
+++ b/tycoon/templates/tycoon/nav.html
@@ -17,7 +17,13 @@
 				{% if user.is_authenticated %}
 				<li><a href="/codeToItem/">코드 입력</a></li>
 				<li><a href="/use/">능력치 올리기</a></li>
-				<li><a href="/combination/">조합하기</a></li>
+				<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">조합하기 <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="/combination/">제작소</a></li>
+						<li><a href="/lab/">연구소</a></li>
+					</ul>
+				</li>
 				<li><a href="/itemBook/">아이템 도감</a></li>
 				<li><a href="/mission/">분반별 미션</a></li>
 				<li><a href="/map/">지도</a></li>
