--- a/tycoon/templates/tycoon/avatar.html
+++ b/tycoon/templates/tycoon/avatar.html
@@ -29,6 +29,101 @@
 					<br>
 				</div>
 			</div>
+			{% if max_index == 0 %}
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-sm-offset-3">
+						<h1 class="text-center">엔딩</h1>
+						<img src="{% static 'tycoon/ending/strength.png' %}" class="img-responsive">
+					</div>
+					<div class="col-xs-12">
+						<br>
+					</div>
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+						<h4 class="text-center">체육관에서 고된 훈련을 보낸 지 어언 6개월... 그는 포카전 굴지의 에이스로 성장했다. 축구, 야구, 농구. 모든 경기에 풀타임으로 출장해 MVP를 석권하며 포카전 승리의 1등공신이 되었다.</h4>
+					</div>
+					<br>
+				</div>
+			</div>
+			{% endif %}
+			{% if max_index == 1 %}
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-sm-offset-3">
+						<h1 class="text-center">엔딩</h1>
+						<img src="{% static 'tycoon/ending/intelligence.png' %}" class="img-responsive">
+					</div>
+					<div class="col-xs-12">
+						<br>
+					</div>
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+						<h4 class="text-center">친구1: 너는 연애 안 해?</h4>
+						<h4 class="text-center">그: 나는 청암이랑 결혼했어.</h4>
+						<h4 class="text-center">그는 A+으로 자신의 포비스를 장식하는 중이다. 학점만이 아니라 각종 연구를 통해 학계에서 촉망받는 신인이 되었다.</h4>
+					</div>
+					<br>
+				</div>
+			</div>
+			{% endif %}
+			{% if max_index == 2 %}
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-sm-offset-3">
+						<h1 class="text-center">엔딩</h1>
+						<img src="{% static 'tycoon/ending/luck.png' %}" class="img-responsive">
+					</div>
+					<div class="col-xs-12">
+						<br>
+					</div>
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+						<h4 class="text-center">장내 아나운서: 올해도 그는 가위바위보 세계 챔피언을 지켜냈습니다! 분석력과 운을 겸비한 극강의 챔피언입니다!</h4>
+						<h4 class="text-center">형산강에서 수련을 계속해온 그는 기어코 자신의 운을 조정하는 능력을 깨우쳤다. 세계 각지를 돌며 가위바위보 도장깨기를 하는 그는 오늘도 비행기표를 끊는다.</h4>
+					</div>
+					<br>
+				</div>
+			</div>
+			{% endif %}
+			{% if max_index == 3 %}
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-sm-offset-3">
+						<h1 class="text-center">엔딩</h1>
+						<img src="{% static 'tycoon/ending/surplus.png' %}" class="img-responsive">
+					</div>
+					<div class="col-xs-12">
+						<br>
+					</div>
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+						<h4 class="text-center">군중: 와아아아아아아!</h4>
+						<h4 class="text-center">리포터: 여기는 포스텍 최초의 팬미팅이 이뤄지고 있는 학생회관입니다. 그를 만나러 많은 사람들이 몰렸는데요, 앗! 지금 그 분이 들어오고 계십니다!</h4>
+						<h4 class="text-center">군중: 와아아아아아아!</h4>
+						<h4 class="text-center">이성에게 깨지던 과거의 그는 사라졌다. 이제 그는 모두가 사랑하는 공대의 아이돌이다.</h4>
+					</div>
+					<br>
+				</div>
+			</div>
+			{% endif %}
+			{% if max_index == 4 %}
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-sm-offset-3">
+						<h1 class="text-center">엔딩</h1>
+						<img src="{% static 'tycoon/ending/charm.png' %}" class="img-responsive">
+					</div>
+					<div class="col-xs-12">
+						<br>
+					</div>
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+						<h4 class="text-center">매일 방에서 귤만 까먹던 일상은 이젠 싫어...</h4>
+						<h4 class="text-center">음? 이렇게 이렇게 하면...?</h4>
+						<h4 class="text-center">그는 이불속에서 귤 껍질의 비기를 찾아냈고 귤 껍질 공예를 하기 시작했다. 그의 작품은 날개돋힌 듯 팔려나갔다.</h4>
+						<h4 class="text-center">평론가: 어-썸! 이건 현대 기술미술의 완성이에요!</h4>
+						<h4 class="text-center">관객: 정말 대-단해!</h4>
+					</div>
+					<br>
+				</div>
+			</div>
+			{% endif %}
 		</div>
 		
 		<!-- CHART -->
